# robot-sdk-python

./: .gitignore  DEVELOPER.md  LICENSE  PLUGIN.md  README.md  design.txt  pyproject.toml  requirements.txt
.github/workflows/: publish-pypi.yml  python-tests.yml  release.yml
examples/: asr_azure_example.py  asr_groq_example.py  asr_riva_example.py  camera_example.py  connect_mqtt_example.py  connect_webrtc_example.py  connect_zmq_example.py  face_examples.py  gesture_examples.py  human_detection.py  kinematics_example.py  media_audio_examples.py  media_video_examples.py  microphone_example.py  motor_examples.py  plugin_mqtt_example.py  plugin_webrtc_example.py  speaker_examples.py  test_asr_azure.py  test_raw.py  test_say.py  test_stream.py  test_transport.py  test_video.py  tts_examples.py
scrtipts/: gen_robot_stubs.py  gen_stubs.py
src/luxai/robot/: __init__.py
src/luxai/robot/core/: __init__.py  actions.py  api_doc.py  api_factory.org.py  api_factory.py  api_list.py  client.py  client.pyi  client_base.pyi  config.py  typed_stream.py
src/luxai/robot/core/frames/: __init__.py  joint_state.py  joint_trajectory.py  led.py  motor_state.py
src/luxai/robot/core/idl/: api.py  api_core.py  api_core_doc.py  api_doc.py  api_list.py  api_plugins.py
src/luxai/robot/core/plugins/: __init__.py  asr_azure_plugin.py  asr_groq_plugin.py  asr_riva_plugin.py  kinematics_plugin.py  remote_plugin.py  robot_plugin.py
src/luxai/robot/core/transport/: __init__.py  local_transport.py  mqtt_options.py  mqtt_transport.py  multi_transport.py  transport.py  webrtc_transport.py  zmq_transport.py
src/luxai/robot/kinematics/: __init__.py  arms_solver.py  head_solver.py  node.py
src/luxai/robot/perception/asr/: __init__.py  azure.py  base.py  groq.py  microphone_stream.py  riva.py
tests/: conftest.py  test_actions.py  test_api_factory.py  test_idl.py  test_kinematics_solvers.py  test_robot.py  test_stubs.py
