[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luxai-robot"
description = "Python SDK for robot, a robot for social interaction developed by LuxAI S.A."
readme = "README.md"
requires-python = ">=3.7.3"
license = { file = "LICENSE" }
authors = [
    { name = "LuxAI S.A." }
]
keywords = ["messaging", "luxai","qtrobot", "robot", "sdk", "api", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
# Important: version is dynamic
dynamic = ["version"]

dependencies = [
    "luxai-magpie",
]

[project.optional-dependencies]

# speech-azure = [
#     "numpy",
#     "soundfile",
# ]

# speech-riva = [
#     "numpy",
#     "soundfile",
# ]

dev = [
    "pytest",
    "coverage"
]

# full = [
#     "numpy",
# ]

# cli = [
#     "numpy",
# ]


[project.urls]
"Homepage" = "https://github.com/luxai-robot/robot-sdk-python"
"Source" = "https://github.com/luxai-robot/robot-sdk-python"
"Bug Tracker" = "https://github.com/luxai-robot/robot-sdk-python/issues"


# [project.scripts]
# robot-gesture-player = "luxai.robot.tools.zmq_gesture_player:main"


# -----------------------------
# setuptools configuration
# -----------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["luxai.robot*"]

# [tool.setuptools.package-data]
# "luxai.robot" = ["assets/*.png"]

# This tells setuptools how to read version dynamically
[tool.setuptools.dynamic]
version = {attr = "luxai.robot.__version__"}
