[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luxai-robot"
description = "Python SDK for robot, a robot for social interaction developed by LuxAI S.A."
readme = "README.md"
requires-python = ">=3.7.3"
license = { file = "LICENSE" }
authors = [
    { name = "LuxAI S.A.", email = "ali.paikan@luxai.com" }
]
keywords = ["messaging", "luxai","qtrobot", "robot", "sdk", "api", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent",
]
# Important: version is dynamic
dynamic = ["version"]

dependencies = [
    "luxai-magpie[discovery]",
]

[project.optional-dependencies]

asr-azure = [
    "torch",  # for VAD
    "torchaudio", # for VAD
    "azure-cognitiveservices-speech"
]

asr-riva = [
    "torch",  # for VAD
    "torchaudio",  # for VAD
    "nvidia-riva-client"
]

asr-groq = [
    "torch",  # for VAD
    "torchaudio",  # for VAD
    "groq"
]

dev = [
    "pytest",
    "coverage"
]

# full = [
#     "numpy",
# ]

# cli = [
#     "numpy",
# ]


[project.urls]
"Homepage" = "https://github.com/luxai-robot/robot-sdk-python"
"Source" = "https://github.com/luxai-robot/robot-sdk-python"
"Bug Tracker" = "https://github.com/luxai-robot/robot-sdk-python/issues"
"Changelog" = "https://github.com/luxai-robot/robot-sdk-python/releases"


# [project.scripts]
# robot-gesture-player = "luxai.robot.tools.zmq_gesture_player:main"


# -----------------------------
# setuptools configuration
# -----------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["luxai.robot*"]

# [tool.setuptools.package-data]
# "luxai.robot" = ["assets/*.png"]

# This tells setuptools how to read version dynamically
[tool.setuptools.dynamic]
version = {attr = "luxai.robot.__version__"}
